dim/spec/test_input/invalid_input/modules/test_module_2.dim
document: test_module_2

test_id_2:
  text: Another test req
  developer: xy_company
  asil: ASIL_A
